// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filemapper: 4.filemap-with-components 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "file": File {
        "base": "_reset.svelte",
        "dir": "test/unit/filemapper/example/admin",
        "ext": ".svelte",
        "name": "_reset",
        "path": "test/unit/filemapper/example/admin/_reset.svelte",
      },
      "id": "_default_admin",
      "meta": Object {
        "reset": true,
      },
      "module": "test/unit/filemapper/example/admin/_reset.svelte::_EVAL",
      "name": "admin",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "file": File {
            "base": "[slug].svelte",
            "dir": "test/unit/filemapper/example/blog",
            "ext": ".svelte",
            "name": "[slug]",
            "path": "test/unit/filemapper/example/blog/[slug].svelte",
          },
          "id": "_default_blog__slug__svelte",
          "meta": Object {
            "dynamic": true,
          },
          "module": "test/unit/filemapper/example/blog/[slug].svelte::_EVAL",
          "name": "[slug]",
        },
        Object {
          "children": Array [],
          "file": File {
            "base": "prefixed[slug].svelte",
            "dir": "test/unit/filemapper/example/blog",
            "ext": ".svelte",
            "name": "prefixed[slug]",
            "path": "test/unit/filemapper/example/blog/prefixed[slug].svelte",
          },
          "id": "_default_blog_prefixed_slug__svelte",
          "meta": Object {
            "dynamic": true,
          },
          "module": "test/unit/filemapper/example/blog/prefixed[slug].svelte::_EVAL",
          "name": "prefixed[slug]",
        },
      ],
      "file": File {
        "base": "blog",
        "dir": "test/unit/filemapper/example",
        "ext": "",
        "name": "blog",
        "path": "test/unit/filemapper/example/blog",
      },
      "id": "_default_blog",
      "meta": Object {},
      "module": "false::_EVAL",
      "name": "blog",
    },
    Object {
      "children": Array [],
      "file": File {
        "base": "index.svelte",
        "dir": "test/unit/filemapper/example",
        "ext": ".svelte",
        "name": "index",
        "path": "test/unit/filemapper/example/index.svelte",
      },
      "id": "_default_index_svelte",
      "meta": Object {},
      "module": "test/unit/filemapper/example/index.svelte::_EVAL",
      "name": "index",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "file": File {
                "base": "foo.svelte",
                "dir": "test/unit/filemapper/example/no-layouts/nested",
                "ext": ".svelte",
                "name": "foo",
                "path": "test/unit/filemapper/example/no-layouts/nested/foo.svelte",
              },
              "id": "_default_no_layouts_nested_foo_svelte",
              "meta": Object {},
              "module": "test/unit/filemapper/example/no-layouts/nested/foo.svelte::_EVAL",
              "name": "foo",
            },
            Object {
              "children": Array [],
              "file": File {
                "base": "index.svelte",
                "dir": "test/unit/filemapper/example/no-layouts/nested",
                "ext": ".svelte",
                "name": "index",
                "path": "test/unit/filemapper/example/no-layouts/nested/index.svelte",
              },
              "id": "_default_no_layouts_nested_index_svelte",
              "meta": Object {},
              "module": "test/unit/filemapper/example/no-layouts/nested/index.svelte::_EVAL",
              "name": "index",
            },
          ],
          "file": File {
            "base": "nested",
            "dir": "test/unit/filemapper/example/no-layouts",
            "ext": "",
            "name": "nested",
            "path": "test/unit/filemapper/example/no-layouts/nested",
          },
          "id": "_default_no_layouts_nested",
          "meta": Object {},
          "module": "false::_EVAL",
          "name": "nested",
        },
      ],
      "file": File {
        "base": "no-layouts",
        "dir": "test/unit/filemapper/example",
        "ext": "",
        "name": "no-layouts",
        "path": "test/unit/filemapper/example/no-layouts",
      },
      "id": "_default_no_layouts",
      "meta": Object {},
      "module": "false::_EVAL",
      "name": "no-layouts",
    },
  ],
  "file": File {
    "base": "_module.svelte",
    "dir": "test/unit/filemapper/example",
    "ext": ".svelte",
    "name": "_module",
    "path": "test/unit/filemapper/example/_module.svelte",
  },
  "id": "_default",
  "meta": Object {},
  "module": "test/unit/filemapper/example/_module.svelte::_EVAL",
  "name": undefined,
  "rootName": "default",
}
`;

exports[`files are mapped: 1.filemap-only 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "file": File {
        "base": "_module.svelte",
        "dir": "test/unit/filemapper/example",
        "ext": ".svelte",
        "name": "_module",
        "path": "test/unit/filemapper/example/_module.svelte",
      },
      "id": "_default__module_svelte",
      "meta": Object {},
      "module": "test/unit/filemapper/example/_module.svelte::_EVAL",
      "name": "_module",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "file": File {
            "base": "_reset.svelte",
            "dir": "test/unit/filemapper/example/admin",
            "ext": ".svelte",
            "name": "_reset",
            "path": "test/unit/filemapper/example/admin/_reset.svelte",
          },
          "id": "_default_admin__reset_svelte",
          "meta": Object {},
          "module": "test/unit/filemapper/example/admin/_reset.svelte::_EVAL",
          "name": "_reset",
        },
      ],
      "file": File {
        "base": "admin",
        "dir": "test/unit/filemapper/example",
        "ext": "",
        "name": "admin",
        "path": "test/unit/filemapper/example/admin",
      },
      "id": "_default_admin",
      "meta": Object {},
      "module": "false::_EVAL",
      "name": "admin",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "file": File {
            "base": "[slug].svelte",
            "dir": "test/unit/filemapper/example/blog",
            "ext": ".svelte",
            "name": "[slug]",
            "path": "test/unit/filemapper/example/blog/[slug].svelte",
          },
          "id": "_default_blog__slug__svelte",
          "meta": Object {},
          "module": "test/unit/filemapper/example/blog/[slug].svelte::_EVAL",
          "name": "[slug]",
        },
        Object {
          "children": Array [],
          "file": File {
            "base": "prefixed[slug].svelte",
            "dir": "test/unit/filemapper/example/blog",
            "ext": ".svelte",
            "name": "prefixed[slug]",
            "path": "test/unit/filemapper/example/blog/prefixed[slug].svelte",
          },
          "id": "_default_blog_prefixed_slug__svelte",
          "meta": Object {},
          "module": "test/unit/filemapper/example/blog/prefixed[slug].svelte::_EVAL",
          "name": "prefixed[slug]",
        },
      ],
      "file": File {
        "base": "blog",
        "dir": "test/unit/filemapper/example",
        "ext": "",
        "name": "blog",
        "path": "test/unit/filemapper/example/blog",
      },
      "id": "_default_blog",
      "meta": Object {},
      "module": "false::_EVAL",
      "name": "blog",
    },
    Object {
      "children": Array [],
      "file": File {
        "base": "index.svelte",
        "dir": "test/unit/filemapper/example",
        "ext": ".svelte",
        "name": "index",
        "path": "test/unit/filemapper/example/index.svelte",
      },
      "id": "_default_index_svelte",
      "meta": Object {},
      "module": "test/unit/filemapper/example/index.svelte::_EVAL",
      "name": "index",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "file": File {
                "base": "foo.svelte",
                "dir": "test/unit/filemapper/example/no-layouts/nested",
                "ext": ".svelte",
                "name": "foo",
                "path": "test/unit/filemapper/example/no-layouts/nested/foo.svelte",
              },
              "id": "_default_no_layouts_nested_foo_svelte",
              "meta": Object {},
              "module": "test/unit/filemapper/example/no-layouts/nested/foo.svelte::_EVAL",
              "name": "foo",
            },
            Object {
              "children": Array [],
              "file": File {
                "base": "index.svelte",
                "dir": "test/unit/filemapper/example/no-layouts/nested",
                "ext": ".svelte",
                "name": "index",
                "path": "test/unit/filemapper/example/no-layouts/nested/index.svelte",
              },
              "id": "_default_no_layouts_nested_index_svelte",
              "meta": Object {},
              "module": "test/unit/filemapper/example/no-layouts/nested/index.svelte::_EVAL",
              "name": "index",
            },
          ],
          "file": File {
            "base": "nested",
            "dir": "test/unit/filemapper/example/no-layouts",
            "ext": "",
            "name": "nested",
            "path": "test/unit/filemapper/example/no-layouts/nested",
          },
          "id": "_default_no_layouts_nested",
          "meta": Object {},
          "module": "false::_EVAL",
          "name": "nested",
        },
      ],
      "file": File {
        "base": "no-layouts",
        "dir": "test/unit/filemapper/example",
        "ext": "",
        "name": "no-layouts",
        "path": "test/unit/filemapper/example/no-layouts",
      },
      "id": "_default_no_layouts",
      "meta": Object {},
      "module": "false::_EVAL",
      "name": "no-layouts",
    },
  ],
  "file": File {
    "base": "example",
    "dir": "test/unit/filemapper",
    "ext": "",
    "name": "example",
    "path": "test/unit/filemapper/example",
  },
  "id": "_default",
  "meta": Object {},
  "module": "undefined::_EVAL",
  "name": undefined,
  "rootName": "default",
}
`;

exports[`modules are merged with parent node: 2.filemap-with-modules 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "file": File {
        "base": "_reset.svelte",
        "dir": "test/unit/filemapper/example/admin",
        "ext": ".svelte",
        "name": "_reset",
        "path": "test/unit/filemapper/example/admin/_reset.svelte",
      },
      "id": "_default_admin",
      "meta": Object {},
      "module": "test/unit/filemapper/example/admin/_reset.svelte::_EVAL",
      "name": "admin",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "file": File {
            "base": "[slug].svelte",
            "dir": "test/unit/filemapper/example/blog",
            "ext": ".svelte",
            "name": "[slug]",
            "path": "test/unit/filemapper/example/blog/[slug].svelte",
          },
          "id": "_default_blog__slug__svelte",
          "meta": Object {},
          "module": "test/unit/filemapper/example/blog/[slug].svelte::_EVAL",
          "name": "[slug]",
        },
        Object {
          "children": Array [],
          "file": File {
            "base": "prefixed[slug].svelte",
            "dir": "test/unit/filemapper/example/blog",
            "ext": ".svelte",
            "name": "prefixed[slug]",
            "path": "test/unit/filemapper/example/blog/prefixed[slug].svelte",
          },
          "id": "_default_blog_prefixed_slug__svelte",
          "meta": Object {},
          "module": "test/unit/filemapper/example/blog/prefixed[slug].svelte::_EVAL",
          "name": "prefixed[slug]",
        },
      ],
      "file": File {
        "base": "blog",
        "dir": "test/unit/filemapper/example",
        "ext": "",
        "name": "blog",
        "path": "test/unit/filemapper/example/blog",
      },
      "id": "_default_blog",
      "meta": Object {},
      "module": "false::_EVAL",
      "name": "blog",
    },
    Object {
      "children": Array [],
      "file": File {
        "base": "index.svelte",
        "dir": "test/unit/filemapper/example",
        "ext": ".svelte",
        "name": "index",
        "path": "test/unit/filemapper/example/index.svelte",
      },
      "id": "_default_index_svelte",
      "meta": Object {},
      "module": "test/unit/filemapper/example/index.svelte::_EVAL",
      "name": "index",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "file": File {
                "base": "foo.svelte",
                "dir": "test/unit/filemapper/example/no-layouts/nested",
                "ext": ".svelte",
                "name": "foo",
                "path": "test/unit/filemapper/example/no-layouts/nested/foo.svelte",
              },
              "id": "_default_no_layouts_nested_foo_svelte",
              "meta": Object {},
              "module": "test/unit/filemapper/example/no-layouts/nested/foo.svelte::_EVAL",
              "name": "foo",
            },
            Object {
              "children": Array [],
              "file": File {
                "base": "index.svelte",
                "dir": "test/unit/filemapper/example/no-layouts/nested",
                "ext": ".svelte",
                "name": "index",
                "path": "test/unit/filemapper/example/no-layouts/nested/index.svelte",
              },
              "id": "_default_no_layouts_nested_index_svelte",
              "meta": Object {},
              "module": "test/unit/filemapper/example/no-layouts/nested/index.svelte::_EVAL",
              "name": "index",
            },
          ],
          "file": File {
            "base": "nested",
            "dir": "test/unit/filemapper/example/no-layouts",
            "ext": "",
            "name": "nested",
            "path": "test/unit/filemapper/example/no-layouts/nested",
          },
          "id": "_default_no_layouts_nested",
          "meta": Object {},
          "module": "false::_EVAL",
          "name": "nested",
        },
      ],
      "file": File {
        "base": "no-layouts",
        "dir": "test/unit/filemapper/example",
        "ext": "",
        "name": "no-layouts",
        "path": "test/unit/filemapper/example/no-layouts",
      },
      "id": "_default_no_layouts",
      "meta": Object {},
      "module": "false::_EVAL",
      "name": "no-layouts",
    },
  ],
  "file": File {
    "base": "_module.svelte",
    "dir": "test/unit/filemapper/example",
    "ext": ".svelte",
    "name": "_module",
    "path": "test/unit/filemapper/example/_module.svelte",
  },
  "id": "_default",
  "meta": Object {},
  "module": "test/unit/filemapper/example/_module.svelte::_EVAL",
  "name": undefined,
  "rootName": "default",
}
`;

exports[`options get added: 3.filemap-with-resets 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "file": File {
        "base": "_reset.svelte",
        "dir": "test/unit/filemapper/example/admin",
        "ext": ".svelte",
        "name": "_reset",
        "path": "test/unit/filemapper/example/admin/_reset.svelte",
      },
      "id": "_default_admin",
      "meta": Object {
        "reset": true,
      },
      "module": "test/unit/filemapper/example/admin/_reset.svelte::_EVAL",
      "name": "admin",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "file": File {
            "base": "[slug].svelte",
            "dir": "test/unit/filemapper/example/blog",
            "ext": ".svelte",
            "name": "[slug]",
            "path": "test/unit/filemapper/example/blog/[slug].svelte",
          },
          "id": "_default_blog__slug__svelte",
          "meta": Object {
            "dynamic": true,
          },
          "module": "test/unit/filemapper/example/blog/[slug].svelte::_EVAL",
          "name": "[slug]",
        },
        Object {
          "children": Array [],
          "file": File {
            "base": "prefixed[slug].svelte",
            "dir": "test/unit/filemapper/example/blog",
            "ext": ".svelte",
            "name": "prefixed[slug]",
            "path": "test/unit/filemapper/example/blog/prefixed[slug].svelte",
          },
          "id": "_default_blog_prefixed_slug__svelte",
          "meta": Object {
            "dynamic": true,
          },
          "module": "test/unit/filemapper/example/blog/prefixed[slug].svelte::_EVAL",
          "name": "prefixed[slug]",
        },
      ],
      "file": File {
        "base": "blog",
        "dir": "test/unit/filemapper/example",
        "ext": "",
        "name": "blog",
        "path": "test/unit/filemapper/example/blog",
      },
      "id": "_default_blog",
      "meta": Object {},
      "module": "false::_EVAL",
      "name": "blog",
    },
    Object {
      "children": Array [],
      "file": File {
        "base": "index.svelte",
        "dir": "test/unit/filemapper/example",
        "ext": ".svelte",
        "name": "index",
        "path": "test/unit/filemapper/example/index.svelte",
      },
      "id": "_default_index_svelte",
      "meta": Object {},
      "module": "test/unit/filemapper/example/index.svelte::_EVAL",
      "name": "index",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "file": File {
                "base": "foo.svelte",
                "dir": "test/unit/filemapper/example/no-layouts/nested",
                "ext": ".svelte",
                "name": "foo",
                "path": "test/unit/filemapper/example/no-layouts/nested/foo.svelte",
              },
              "id": "_default_no_layouts_nested_foo_svelte",
              "meta": Object {},
              "module": "test/unit/filemapper/example/no-layouts/nested/foo.svelte::_EVAL",
              "name": "foo",
            },
            Object {
              "children": Array [],
              "file": File {
                "base": "index.svelte",
                "dir": "test/unit/filemapper/example/no-layouts/nested",
                "ext": ".svelte",
                "name": "index",
                "path": "test/unit/filemapper/example/no-layouts/nested/index.svelte",
              },
              "id": "_default_no_layouts_nested_index_svelte",
              "meta": Object {},
              "module": "test/unit/filemapper/example/no-layouts/nested/index.svelte::_EVAL",
              "name": "index",
            },
          ],
          "file": File {
            "base": "nested",
            "dir": "test/unit/filemapper/example/no-layouts",
            "ext": "",
            "name": "nested",
            "path": "test/unit/filemapper/example/no-layouts/nested",
          },
          "id": "_default_no_layouts_nested",
          "meta": Object {},
          "module": "false::_EVAL",
          "name": "nested",
        },
      ],
      "file": File {
        "base": "no-layouts",
        "dir": "test/unit/filemapper/example",
        "ext": "",
        "name": "no-layouts",
        "path": "test/unit/filemapper/example/no-layouts",
      },
      "id": "_default_no_layouts",
      "meta": Object {},
      "module": "false::_EVAL",
      "name": "no-layouts",
    },
  ],
  "file": File {
    "base": "_module.svelte",
    "dir": "test/unit/filemapper/example",
    "ext": ".svelte",
    "name": "_module",
    "path": "test/unit/filemapper/example/_module.svelte",
  },
  "id": "_default",
  "meta": Object {},
  "module": "test/unit/filemapper/example/_module.svelte::_EVAL",
  "name": undefined,
  "rootName": "default",
}
`;
